--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 ATLAS_URI = 'mongodb+srv://gilbert:mavhunguro101@cluster0.raol9.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority';
+ PUSHER_APP_ID=YOUR_APP_ID
+    PUSHER_APP_KEY=YOUR_APP_KEY
+    PUSHER_APP_SECRET=YOUR_APP_SECRET
+    PUSHER_APP_CLUSTER=YOUR_APP_CLUSTER
