--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.26",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "@popperjs/core": "^2.4.4",
