--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
     "mongoose": "^5.9.26",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
+    "slugify": "^1.4.7",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
